--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 
 jdk:
-  - openjdk6
+  - openjdk7
 
 sudo: false
 
@@ -9,6 +9,11 @@ before_install:
   - ls -a
   - pwd
   - ./gradlew clean
+
+env:
+  global:
+  - civbuddy_jdk6_javac=/usr/lib/jvm/java-6-openjdk-amd64/bin/javac
+  - civbuddy_jdk6_javadoc=/usr/lib/jvm/java-6-openjdk-amd64/bin/javadoc
 
 cache:
   directories:
