--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "**/.gradle": true,
         "**/.idea": true,
         "**/_support": true,
+        "**/node_modules": true,
         "**/build": true
       }
 }
