--- a/package.json
+++ b/package.json
@@ -2,21 +2,33 @@
   "name": "civbuddy",
   "version": "2.0.0",
   "description": "A calculator app for players of Francis Tresham's original Civilization board game (1980), helpful when buying civilization cards.",
-  "keywords": ["board-game", "civilization", "francis-tresham"],
+  "keywords": [
+    "board-game",
+    "civilization",
+    "francis-tresham"
+  ],
   "homepage": "http://civbuddy.org/",
-  "bugs": {"url": "https://github.com/tsjensen/civbuddy2/issues"},
+  "bugs": {
+    "url": "https://github.com/tsjensen/civbuddy2/issues"
+  },
   "license": "GPL-3.0",
-  "author": {"name": "Thomas Jensen"},
+  "author": {
+    "name": "Thomas Jensen"
+  },
   "repository": "github:tsjensen/civbuddy2",
-
   "scripts": {
     "prebuild": "tsc",
     "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-
   "dependencies": {
-    "@types/node": "8.5.1"
+    "@types/bootstrap": "3.3.36",
+    "@types/jquery": "3.2.17",
+    "@types/mustache": "0.8.30",
+    "@types/node": "8.5.1",
+    "@types/uuid": "3.4.3",
+    "mustache": "2.3.0",
+    "uuid": "3.1.0"
   },
   "devDependencies": {
     "typescript": "2.6.2",
