Add babel-polyfill (required for l20n browser compatibility)

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/mustache": "0.8.30",
     "@types/node": "8.5.1",
     "@types/uuid": "3.4.3",
+    "babel-polyfill": "6.26.0",
     "bootstrap": "4.0.0-beta.2",
     "jquery": "3.2.1",
     "l20n": "5.0.0",
