--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery": "3.2.1",
     "l20n": "5.0.0",
     "mustache": "2.3.0",
+    "open-iconic": "1.1.1",
     "popper.js": "1.12.3",
     "uuid": "3.1.0"
   },
