--- a/package.json
+++ b/package.json
@@ -30,16 +30,17 @@
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
-    "bootstrap": "4.0.0-beta.2",
+    "bootstrap": "4.0.0",
+    "bootswatch": "4.0.0",
     "jquery": "3.2.1",
     "l20n": "5.0.0",
     "mustache": "2.3.0",
     "open-iconic": "1.1.1",
-    "popper.js": "1.12.3",
+    "popper.js": "1.12.9",
     "uuid": "3.1.0"
   },
   "devDependencies": {
-    "@types/bootstrap": "3.3.36",
+    "@types/bootstrap": "3.3.37",
     "@types/jquery": "3.2.17",
     "@types/mustache": "0.8.30",
     "@types/node": "8.5.1",
