--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mustache": "2.3.0",
     "open-iconic": "1.1.1",
     "popper.js": "1.12.9",
+    "sprintf-js": "1.1.1",
     "uuid": "3.1.0"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@types/jquery": "3.2.17",
     "@types/mustache": "0.8.30",
     "@types/node": "8.5.1",
+    "@types/sprintf-js": "1.1.0",
     "@types/uuid": "3.4.3",
     "copy-webpack-plugin": "4.3.1",
     "copyfiles": "1.2.0",
