--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "copy-webpack-plugin": "4.3.1",
     "copyfiles": "1.2.0",
     "execa": "0.9.0",
+    "ejs": "2.5.7",
     "htmlprocessor": "0.2.6",
     "replace": "0.3.0",
     "typescript": "2.7.1",
