Introduce npm-run-all for parallel builds

--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
   "scripts": {
     "prebuild": "copyup resources/rules/*.json build/ts/ & tsc",
     "build": "webpack",
-    "postbuild": "npm run -s html-template-index & npm run -s html-template-players & npm run -s html-template-cards & npm run -s html-template-funds",
+    "postbuild": "npm-run-all --parallel --silent html-template:*",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "html-template-index": "htmlprocessor resources/index.html -o build/dist/index.html",
-    "posthtml-template-index": "replace @@pageName@@ games build/dist/index.html -q",
-    "html-template-players": "htmlprocessor resources/players.html -o build/dist/players.html",
-    "posthtml-template-players": "replace @@pageName@@ players build/dist/players.html -q",
-    "html-template-cards": "htmlprocessor resources/cards.html -o build/dist/cards.html",
-    "posthtml-template-cards": "replace @@pageName@@ cards build/dist/cards.html -q",
-    "html-template-funds": "htmlprocessor resources/funds.html -o build/dist/funds.html",
-    "posthtml-template-funds": "replace @@pageName@@ funds build/dist/funds.html -q"
+    "html-template:index": "htmlprocessor resources/index.html -o build/dist/index.html",
+    "posthtml-template:index": "replace @@pageName@@ games build/dist/index.html -q",
+    "html-template:players": "htmlprocessor resources/players.html -o build/dist/players.html",
+    "posthtml-template:players": "replace @@pageName@@ players build/dist/players.html -q",
+    "html-template:cards": "htmlprocessor resources/cards.html -o build/dist/cards.html",
+    "posthtml-template:cards": "replace @@pageName@@ cards build/dist/cards.html -q",
+    "html-template:funds": "htmlprocessor resources/funds.html -o build/dist/funds.html",
+    "posthtml-template:funds": "replace @@pageName@@ funds build/dist/funds.html -q"
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
@@ -51,9 +51,10 @@
     "@types/uuid": "3.4.3",
     "copy-webpack-plugin": "4.3.1",
     "copyfiles": "1.2.0",
-    "execa": "0.9.0",
     "ejs": "2.5.7",
+    "execa": "0.9.0",
     "htmlprocessor": "0.2.6",
+    "npm-run-all": "4.1.2",
     "replace": "0.3.0",
     "typescript": "2.7.1",
     "webpack": "3.10.0",
