--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,7 @@
     "editor.dragAndDrop": false,
     "editor.rulers": [120],
     "editor.wordWrapColumn": 120,
-    "typescript.tsdk": "node_modules\\typescript\\lib"
+    "typescript.tsdk": "node_modules\\typescript\\lib",
+    "typescriptHero.imports.multiLineWrapThreshold": 120,
+    "typescriptHero.imports.organizeOnSave": true
 }
