--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,6 @@
     "editor.wordWrapColumn": 120,
     "typescript.tsdk": "node_modules\\typescript\\lib",
     "typescriptHero.imports.multiLineWrapThreshold": 120,
-    "typescriptHero.imports.organizeOnSave": true
+    "typescriptHero.imports.organizeOnSave": true,
+    "typescriptHero.imports.multiLineTrailingComma": false
 }
