--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "repository": "github:tsjensen/civbuddy2",
   "scripts": {
     "prebuild": "copyup resources/rules/*.json build/ts/ & tsc",
-    "build": "webpack",
+    "build": "cross-env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack",
     "postbuild": "npm-run-all --parallel --silent html-template:* sass",
     "sass": "node-sass --source-map=true src/sass -o build/dist/css/",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -45,19 +45,25 @@
   },
   "devDependencies": {
     "@types/bootstrap": "3.3.37",
+    "@types/copy-webpack-plugin": "4.4.0",
+    "@types/execa": "0.8.1",
     "@types/jquery": "3.2.17",
     "@types/mustache": "0.8.30",
     "@types/node": "8.5.1",
     "@types/sprintf-js": "1.1.0",
     "@types/uuid": "3.4.3",
+    "@types/webpack": "3.8.8",
     "copy-webpack-plugin": "4.3.1",
     "copyfiles": "1.2.0",
+    "cross-env": "5.1.3",
     "ejs": "2.5.7",
     "execa": "0.9.0",
     "htmlprocessor": "0.2.6",
     "node-sass": "4.7.2",
     "npm-run-all": "4.1.2",
     "replace": "0.3.0",
+    "ts-node": "5.0.0",
+    "tsconfig-paths": "3.1.1",
     "typescript": "2.7.1",
     "webpack": "3.11.0",
     "webpack-version-file-plugin": "0.2.3"
