--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "replace": "0.3.0",
     "replaceinfiles": "1.1.4",
     "rimraf": "2.6.2",
+    "ssri": "5.2.2",
     "ts-loader": "3.5.0",
     "ts-node": "5.0.0",
     "tsconfig-paths": "3.1.1",
