--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "sourceMap": true,
         "pretty": true,
         "noImplicitAny": true,
+        "noImplicitReturns": true,
         "module": "es2015",
         "moduleResolution": "node",
         "lib": ["es2015", "dom"],
