--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
         "pretty": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "noUnusedLocals": true,
         "module": "es2015",
         "moduleResolution": "node",
         "lib": ["es2015", "dom"],
