--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "ts-loader": "3.5.0",
     "ts-node": "5.0.0",
     "tsconfig-paths": "3.1.1",
+    "tslint": "5.9.1",
     "typescript": "2.7.1",
     "webpack": "3.11.0",
     "webpack-version-file-plugin": "0.2.3"
