Add tslint checking to build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
     "editor.dragAndDrop": false,
     "editor.rulers": [120],
     "editor.wordWrapColumn": 120,
+    "tslint.alwaysShowStatus": true,
+    "tslint.configFile": "tslint.json",
+    "tslint.enable": true,
     "typescript.tsdk": "node_modules\\typescript\\lib",
     "typescriptHero.imports.multiLineWrapThreshold": 120,
     "typescriptHero.imports.organizeOnSave": true,
