--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "hash": "hashmark -l 12 -r --cwd build/dist/js civbuddy.js {name}.{hash}{ext} | replaceinfiles --silent --source build/dist/*.html",
     "posthash": "rimraf build/dist/{css,js}/*.map",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tslint": "tslint --project . --format verbose"
+    "tslint": "tslint --project tsconfig.json --format verbose"
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
