--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
     "name": "civbuddy",
-    "version": "2.3.0",
-    "description": "A calculator app for players of Francis Tresham's original Civilization board game (1980), helpful when buying civilization cards.",
+    "version": "2.3.1",
+    "description": "A calculator app for players of Francis Tresham's original Civilization board game (1980)",
     "keywords": ["board-game", "civilization", "francis-tresham"],
-    "homepage": "http://civbuddy.org/",
+    "homepage": "https://civbuddy.org/",
     "bugs": {
-        "url": "https://github.com/tsjensen/civbuddy2/issues"
+        "url": "https://github.com/tsjensen/civbuddy/issues"
     },
     "license": "GPL-3.0",
     "author": {
         "name": "Thomas Jensen"
     },
-    "repository": "github:tsjensen/civbuddy2",
+    "repository": "github:tsjensen/civbuddy",
     "scripts": {
         "prebuild": "copyfiles -f resources/version.json build/",
         "build": "npm-run-all --parallel --silent html-template:* sass tslint",
@@ -35,35 +35,35 @@
     },
     "dependencies": {
         "babel-polyfill": "6.26.0",
-        "bootstrap": "4.0.0",
-        "bootswatch": "4.0.0",
-        "jquery": "3.2.1",
+        "bootstrap": "4.1.1",
+        "bootswatch": "4.1.1",
+        "jquery": "3.3.1",
         "l20n": "5.0.0",
         "mustache": "2.3.0",
         "open-iconic": "1.1.1",
-        "popper.js": "1.12.9",
+        "popper.js": "1.14.3",
         "sprintf-js": "1.1.1",
-        "uuid": "3.1.0"
+        "uuid": "3.2.1"
     },
     "devDependencies": {
-        "@types/bootstrap": "3.3.37",
-        "@types/copy-webpack-plugin": "4.4.0",
-        "@types/execa": "0.8.1",
-        "@types/jquery": "3.2.17",
+        "@types/bootstrap": "4.1.0",
+        "@types/copy-webpack-plugin": "4.4.1",
+        "@types/execa": "0.9.0",
+        "@types/jquery": "3.3.1",
         "@types/mustache": "0.8.30",
-        "@types/node": "8.5.1",
+        "@types/node": "8.9.4",
         "@types/sprintf-js": "1.1.0",
         "@types/uuid": "3.4.3",
         "@types/webpack": "3.8.8",
-        "copy-webpack-plugin": "4.3.1",
+        "copy-webpack-plugin": "4.4.1",
         "copyfiles": "1.2.0",
         "cross-env": "5.1.3",
         "ejs": "2.5.7",
         "execa": "0.9.0",
         "hashmark": "5.0.0",
         "htmlprocessor": "0.2.6",
-        "node-sass": "4.7.2",
-        "npm-run-all": "4.1.2",
+        "node-sass": "4.9.0",
+        "npm-run-all": "4.1.3",
         "replace": "0.3.0",
         "replaceinfiles": "1.1.4",
         "rimraf": "2.6.2",
@@ -72,8 +72,8 @@
         "ts-node": "5.0.0",
         "tsconfig-paths": "3.1.1",
         "tslint": "5.9.1",
-        "typescript": "2.7.1",
+        "typescript": "2.8.1",
         "webpack": "3.11.0",
-        "webpack-version-file-plugin": "0.2.3"
+        "webpack-version-file-plugin": "0.3.1"
     }
 }
