Add unit test capability with mocha and chai

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,10 +19,13 @@
     "editor.rulers": [120],
     "editor.wordWrapColumn": 120,
     "json.format.enable": false,
+    "mocha.files.glob": "test/ts/**/*.test.ts",
+    "mocha.options": { "useColors": false },
+    "mocha.logVerbose": true,
+    "mocha.requires": ["ts-node/register", "jsdom-global/register"],
     "tslint.alwaysShowStatus": true,
     "tslint.configFile": "tslint.json",
     "tslint.enable": true,
-    "tslint.exclude": "webpack.config.ts",
     "typescript.tsdk": "node_modules\\typescript\\lib",
     "typescriptHero.imports.multiLineWrapThreshold": 120,
     "typescriptHero.imports.organizeOnSave": true,
