--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "prehash": "hashmark -l 12 -r --cwd build/dist/css {civbuddy,cards,games,error,funds,players}.css {name}.{hash}{ext} | replaceinfiles --silent --source build/dist/*.html",
         "hash": "hashmark -l 12 -r --cwd build/dist/js {bootstrap.min,civbuddy,l20n.min}.js {name}.{hash}{ext} | replaceinfiles --silent --source build/dist/*.html",
         "posthash": "rimraf build/dist/{css,js}/*.map",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "cross-env TS_NODE_COMPILER_OPTIONS={\\\"module\\\":\\\"commonjs\\\"} mocha --require ts-node/register --require jsdom-global/register test/ts/**/*.test.ts",
         "tslint": "tslint --project tsconfig.json --format verbose"
     },
     "dependencies": {
@@ -47,14 +47,17 @@
     },
     "devDependencies": {
         "@types/bootstrap": "4.1.0",
+        "@types/chai": "4.1.3",
         "@types/copy-webpack-plugin": "4.4.1",
         "@types/execa": "0.9.0",
         "@types/jquery": "3.3.1",
+        "@types/mocha": "5.2.0",
         "@types/mustache": "0.8.30",
         "@types/node": "8.9.4",
         "@types/sprintf-js": "1.1.0",
         "@types/uuid": "3.4.3",
         "@types/webpack": "3.8.8",
+        "chai": "4.1.2",
         "copy-webpack-plugin": "4.4.1",
         "copyfiles": "1.2.0",
         "cross-env": "5.1.3",
@@ -62,6 +65,9 @@
         "execa": "0.9.0",
         "hashmark": "5.0.0",
         "htmlprocessor": "0.2.6",
+        "jsdom": "11.10.0",
+        "jsdom-global": "3.0.2",
+        "mocha": "5.2.0",
         "node-sass": "4.9.0",
         "npm-run-all": "4.1.3",
         "replace": "0.3.0",
@@ -69,7 +75,7 @@
         "rimraf": "2.6.2",
         "ssri": "5.2.2",
         "ts-loader": "3.5.0",
-        "ts-node": "5.0.0",
+        "ts-node": "5.0.1",
         "tsconfig-paths": "3.1.1",
         "tslint": "5.9.1",
         "typescript": "2.8.1",
