--- a/resources/favicon/manifest.json
+++ b/resources/favicon/manifest.json
@@ -1,5 +1,7 @@
 {
 	"name": "CivBuddy",
+    "background_color": "#222",
+    "display": "standalone",
 	"icons": [
 		{
 			"src": "favicon\/android-chrome-36x36.png",
