Add progressive web app splash screen
based on these websites:
- https://medium.com/@applification/progressive-web-app-splash-screens-80340b45d210
- https://developer.apple.com/library/archive/documentation/DeviceInformation/Reference/iOSDeviceCompatibility/Displays/Displays.html

These are shown instead of a blank screen while CivBuddy loads as an app.

--- a/resources/favicon/manifest.json
+++ b/resources/favicon/manifest.json
@@ -38,6 +38,12 @@
 			"sizes": "192x192",
 			"type": "image\/png",
 			"density": "4.0"
+		},
+		{
+			"src": "favicon\/splash\/lion-splash-icon-1024x1024.png",
+			"sizes": "1024x1024",
+			"type": "image\/png",
+			"density": "1.0"
 		}
 	]
 }
