Major update to all dependencies
This includes an update to TypeScript (from 2.8.1 to 3.4.2),
a major webpack upgrade, and an upgrade to test tool versions.
These contained some breaking changes which required changes
to the application in order to compensate. (none of them
functional of course)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
         "strict": true,
         "target": "es2015",
         "listEmittedFiles": true,
-        "listFiles": true
+        "listFiles": true,
+        "resolveJsonModule": true,
+        "esModuleInterop": true
     },
     "include": [
         "./src/ts/**/*.ts"
