--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
     "name": "civbuddy",
     "version": "2.3.4",
     "description": "A calculator app for players of Francis Tresham's original Civilization board game (1980)",
-    "keywords": ["board-game", "civilization", "francis-tresham"],
+    "keywords": [
+        "board-game",
+        "civilization",
+        "francis-tresham"
+    ],
     "homepage": "https://civbuddy.org/",
     "bugs": {
         "url": "https://github.com/tsjensen/civbuddy/issues"
@@ -13,32 +17,35 @@
     },
     "repository": "github:tsjensen/civbuddy",
     "scripts": {
-        "prebuild": "copyfiles -f resources/version.json build/",
-        "build": "npm-run-all --parallel --silent fix-l20n process-html sass tslint",
-        "process-html": "node node_modules/html-includes/bin/run.js --src resources --dest build/dist",
-        "sass": "node-sass --source-map=true src/sass -o build/dist/css/",
+        "reset-version-json": "git checkout src/ts/framework/version.json",
+        "build": "npm-run-all --parallel --silent reset-version-json fix-l20n process-html sass tslint",
         "prefix-l20n": "rimraf build/l20n && copyfiles -f node_modules/l20n/dist/web/l20n.js build/l20n",
         "fix-l20n": "apply-patch l20n-mojibake-fix.patch",
         "postfix-l20n": "uglifyjs build/l20n/l20n.js -m -c -o build/l20n/l20n.min.js",
-        "postbuild": "cross-env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack",
-        "prehash": "hashmark -l 12 -r --cwd build/dist/css {civbuddy,cards,games,error,funds,players}.css {name}.{hash}{ext} | replaceinfiles --silent --source build/dist/*.html",
-        "hash": "hashmark -l 12 -r --cwd build/dist/js {bootstrap.min,civbuddy,l20n.min}.js {name}.{hash}{ext} | replaceinfiles --silent --source build/dist/*.html",
-        "posthash": "rimraf build/dist/{css,js}/*.map",
-        "test": "cross-env TS_NODE_COMPILER_OPTIONS={\\\"module\\\":\\\"commonjs\\\"} mocha --require ts-node/register --require jsdom-global/register test/ts/**/*.test.ts",
+        "process-html": "node node_modules/html-includes/bin/run.js --src resources --dest build/dist",
+        "sass": "node-sass --source-map=true src/sass -o build/dist/css/",
         "tslint": "tslint --project tsconfig.json --format verbose src/ts/**/*.ts",
-        "posttslint": "tslint --project tsconfig-test.json --format verbose test/ts/**/*.ts"
+        "posttslint": "tslint --project tsconfig-test.json --format verbose test/ts/**/*.ts",
+        "postbuild": "cross-env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack",
+        "test": "cross-env TS_NODE_COMPILER_OPTIONS={\\\"module\\\":\\\"commonjs\\\"} mocha --require ts-node/register --require jsdom-global/register test/ts/**/*.test.ts",
+        "preprod": "npm-run-all reset-version-json webpack-prod",
+        "webpack-prod": "cross-env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack --mode=production",
+        "prod": "npm-run-all --parallel hash:* remove-maps",
+        "hash:css": "hashmark -l 12 -r --cwd build/dist/css {civbuddy,cards,games,error,funds,players}.css {name}.{hash}{ext} | replaceinfiles --silent --source build/dist/*.html",
+        "hash:js": "hashmark -l 12 -r --cwd build/dist/js {bootstrap.min,civbuddy,l20n.min}.js {name}.{hash}{ext} | replaceinfiles --silent --source build/dist/*.html",
+        "remove-maps": "rimraf build/dist/{css,js}/*.map"
     },
     "dependencies": {
         "babel-polyfill": "6.26.0",
-        "bootstrap": "4.1.2",
-        "bootswatch": "4.1.2",
+        "bootstrap": "4.3.1",
+        "bootswatch": "4.3.1",
         "jquery": "3.3.1",
         "l20n": "5.0.0",
-        "mustache": "2.3.0",
+        "mustache": "2.3.2",
         "open-iconic": "1.1.1",
-        "popper.js": "1.14.3",
-        "sprintf-js": "1.1.1",
-        "uuid": "3.2.1"
+        "popper.js": "1.14.7",
+        "sprintf-js": "1.1.2",
+        "uuid": "3.3.2"
     },
     "devDependencies": {
         "@songkick/replaceinfiles": "1.1.6",
@@ -47,21 +54,21 @@
         "@types/copy-webpack-plugin": "4.4.3",
         "@types/execa": "0.9.0",
         "@types/jquery": "3.3.1",
-        "@types/mocha": "5.2.0",
-        "@types/mustache": "0.8.30",
-        "@types/node": "8.9.4",
-        "@types/sprintf-js": "1.1.0",
-        "@types/uuid": "3.4.3",
-        "@types/webpack": "3.8.8",
+        "@types/mocha": "5.2.6",
+        "@types/mustache": "0.8.32",
+        "@types/node": "10.14.4",
+        "@types/sprintf-js": "1.1.2",
+        "@types/uuid": "3.4.4",
+        "@types/webpack": "4.4.27",
         "apply-patch": "0.1.2",
-        "chai": "4.1.2",
-        "copy-webpack-plugin": "4.4.1",
-        "copyfiles": "1.2.0",
-        "cross-env": "5.1.3",
-        "ejs": "2.5.7",
-        "execa": "0.9.0",
+        "chai": "4.2.0",
+        "copy-webpack-plugin": "5.0.2",
+        "copyfiles": "2.1.0",
+        "cross-env": "5.2.0",
+        "ejs": "2.6.1",
+        "execa": "1.0.0",
         "hashmark": "5.0.0",
-        "html-includes": "4.1.0",
+        "html-includes": "4.1.1",
         "jsdom": "14.0.0",
         "jsdom-global": "3.0.2",
         "mocha": "6.1.0",
@@ -69,13 +76,14 @@
         "npm-run-all": "4.1.5",
         "rimraf": "2.6.3",
         "ssri": "6.0.1",
-        "ts-loader": "3.5.0",
-        "ts-node": "5.0.1",
+        "ts-loader": "5.3.3",
+        "ts-node": "8.0.3",
         "tsconfig-paths": "3.8.0",
         "tslint": "5.15.0",
-        "typescript": "2.8.1",
-        "uglify-js": "^2.8.22",
-        "webpack": "3.11.0",
-        "webpack-version-file-plugin": "0.3.1"
+        "typescript": "3.4.2",
+        "uglify-js": "3.5.3",
+        "webpack": "4.29.6",
+        "webpack-cli": "3.3.0",
+        "webpack-version-file-plugin": "0.3.3"
     }
 }
