--- a/package.json
+++ b/package.json
@@ -14,17 +14,8 @@
     "repository": "github:tsjensen/civbuddy",
     "scripts": {
         "prebuild": "copyfiles -f resources/version.json build/",
-        "build": "npm-run-all --parallel --silent fix-l20n html-template:* sass tslint",
-        "html-template:index": "htmlprocessor resources/index.html -o build/dist/index.html",
-        "posthtml-template:index": "replace @@pageName@@ games build/dist/index.html -q",
-        "html-template:players": "htmlprocessor resources/players.html -o build/dist/players.html",
-        "posthtml-template:players": "replace @@pageName@@ players build/dist/players.html -q",
-        "html-template:cards": "htmlprocessor resources/cards.html -o build/dist/cards.html",
-        "posthtml-template:cards": "replace @@pageName@@ cards build/dist/cards.html -q",
-        "html-template:funds": "htmlprocessor resources/funds.html -o build/dist/funds.html",
-        "posthtml-template:funds": "replace @@pageName@@ funds build/dist/funds.html -q",
-        "html-template:error": "htmlprocessor resources/error.html -o build/dist/error.html",
-        "posthtml-template:error": "replace @@pageName@@ error build/dist/error.html -q",
+        "build": "npm-run-all --parallel --silent fix-l20n process-html sass tslint",
+        "process-html": "node node_modules/html-includes/bin/run.js --src resources --dest build/dist",
         "sass": "node-sass --source-map=true src/sass -o build/dist/css/",
         "prefix-l20n": "rimraf build/l20n && copyfiles -f node_modules/l20n/dist/web/l20n.js build/l20n",
         "fix-l20n": "apply-patch l20n-mojibake-fix.patch",
@@ -50,9 +41,10 @@
         "uuid": "3.2.1"
     },
     "devDependencies": {
-        "@types/bootstrap": "4.1.2",
-        "@types/chai": "4.1.3",
-        "@types/copy-webpack-plugin": "4.4.1",
+        "@songkick/replaceinfiles": "1.1.6",
+        "@types/bootstrap": "4.3.0",
+        "@types/chai": "4.1.7",
+        "@types/copy-webpack-plugin": "4.4.3",
         "@types/execa": "0.9.0",
         "@types/jquery": "3.3.1",
         "@types/mocha": "5.2.0",
@@ -69,20 +61,18 @@
         "ejs": "2.5.7",
         "execa": "0.9.0",
         "hashmark": "5.0.0",
-        "htmlprocessor": "0.2.6",
-        "jsdom": "11.10.0",
+        "html-includes": "4.1.0",
+        "jsdom": "14.0.0",
         "jsdom-global": "3.0.2",
-        "mocha": "5.2.0",
-        "node-sass": "4.9.0",
-        "npm-run-all": "4.1.3",
-        "replace": "0.3.0",
-        "replaceinfiles": "1.1.4",
-        "rimraf": "2.6.2",
-        "ssri": "5.2.2",
+        "mocha": "6.1.0",
+        "node-sass": "4.11.0",
+        "npm-run-all": "4.1.5",
+        "rimraf": "2.6.3",
+        "ssri": "6.0.1",
         "ts-loader": "3.5.0",
         "ts-node": "5.0.1",
-        "tsconfig-paths": "3.1.1",
-        "tslint": "5.9.1",
+        "tsconfig-paths": "3.8.0",
+        "tslint": "5.15.0",
         "typescript": "2.8.1",
         "uglify-js": "^2.8.22",
         "webpack": "3.11.0",
